--- a/userControl/style.css
+++ b/userControl/style.css
@@ -70,3 +70,30 @@ body {
 .myicon2{
 	cursor: default;
 }
+
+.button {
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 18px;	
+  }
+  
+  .button5 {background-color: #706c6c;} /* Black */
+
+  .center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30%;
+  }
+
+  .button:hover {
+	box-shadow: 1px 1px 25px 10px rgba(146, 148, 248, 0.4)
+  }
